--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,18 @@
-# Compiled class file
-*.class
+node_modules/
 
-# Log file
+accounts.json
+account_data/
+
+# Logs
 *.log
+npm-debug.log*
 
-# BlueJ files
-*.ctxt
+# OS files
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
